# neetan

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/blake3/: Cargo.toml
crates/blake3/src/: lib.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: i286.rs  i386.rs  i8086.rs  lib.rs  v30.rs  vx0.rs  z80.rs
crates/cpu/src/i286/: alu.rs  biu.rs  execute.rs  execute_0f.rs  execute_group.rs  flags.rs  interrupt.rs  modrm.rs  rep.rs  state.rs  string_ops.rs  timing.rs
crates/cpu/src/i386/: alu.rs  execute.rs  execute_0f.rs  execute_group.rs  flags.rs  fpu.rs  fpu_dispatch.rs  fpu_ops.rs  interrupt.rs  modrm.rs  paging.rs  rep.rs  state.rs  string_ops.rs
crates/cpu/src/i8086/: alu.rs  biu.rs  execute.rs  execute_group.rs  flags.rs  interrupt.rs  modrm.rs  muldiv_timing.rs  rep.rs  state.rs  string_ops.rs
crates/cpu/src/v30/: alu.rs  biu.rs  execute.rs  execute_0f.rs  execute_group.rs  interrupt.rs  modrm.rs  rep.rs  state.rs  string_ops.rs
crates/cpu/src/vx0/: alu.rs  biu.rs  execute.rs  execute_0f.rs  execute_group.rs  flags.rs  interrupt.rs  modrm.rs  rep.rs  state.rs  string_ops.rs
crates/cpu/src/z80/: alu.rs  execute.rs  execute_cb.rs  execute_ed.rs  execute_xy.rs  flags.rs  interrupt.rs  state.rs
crates/cpu/tests/: extensions_i486.rs  i486_manual.rs  paging_i386.rs  protected_mode_i286.rs  protected_mode_i386.rs  regression_i286.rs  regression_v30.rs  rep_resume.rs  test386.rs  undefined_i8086.rs  verification_i286.rs  verification_i286_timing.rs  verification_i386.rs  verification_i8086.rs  verification_v20_timing.rs  verification_v30.rs  verification_v30_timing.rs  verification_vx0.rs  verification_z80.rs  x87_i386.rs
crates/cpu/tests/common/: metadata_json.rs  verification_common.rs
crates/cpu/tests/i486_manual/: call_jmp_far.rs  cli_sti.rs  i486_specific.rs  in_out.rs  int3_into_bound.rs  int_n.rs  iret.rs  lar_lsl.rs  lds_les_lfs_lgs_lss.rs  long_tail.rs  mixed_16_32.rs  mov_sreg.rs  popf_pushf.rs  real_mode_addressing.rs  real_mode_instruction_semantics.rs  setup.rs  system_control.rs  v86_addressing_and_faults.rs  v86_mode_transitions.rs
crates/cpu/tests/test386/: .gitignore  Makefile  configuration.asm
crates/device/: Cargo.toml
crates/device/src/: beeper.rs  bios.rs  cd_audio.rs  cdrom.rs  cgrom.rs  disk.rs  disk_backend.rs  disk_hle.rs  display_control.rs  egc.rs  fdd320_ppi.rs  fdd640k_hle.rs  floppy.rs  grcg.rs  i8237_dma.rs  i8251_keyboard.rs  i8251_serial.rs  i8253_pit.rs  i8255_mouse_ppi.rs  i8255_system_ppi.rs  i8259a_pic.rs  ide.rs  lib.rs  mpu401.rs  mpu_pc98ii.rs  mt32.rs  palette.rs  pegc.rs  printer.rs  sasi.rs  sc55.rs  sdip.rs  software_renderer.rs  sound_blaster_16.rs  soundboard_14.rs  soundboard_26k.rs  soundboard_86.rs  upd4990a_rtc.rs  upd52611_crtc.rs  upd7220_gdc.rs  (+1 more)
crates/device/src/disk/: hdi.rs  nhd.rs  thd.rs
crates/device/src/floppy/: d88.rs  hdm.rs  nfd.rs
crates/device/src/ide/: atapi.rs  hle.rs  lle.rs
crates/device/src/sasi/: hle.rs  lle.rs
crates/device/src/software_renderer/: compose.rs  text_normalizer.rs
crates/device/src/soundboard_14/: tms3631.rs
crates/device/src/upd7220_gdc/: commands.rs  drawing.rs  fifo.rs
crates/device/tests/: d88.rs  hdm.rs  i8251_keyboard.rs  i8253_pit.rs  i8255_mouse_ppi.rs  i8259a_pic.rs  nfd.rs  software_renderer.rs
crates/device/tests/fixture/: blank.hdm  blank_2DD.d88  blank_2HD.d88  blank_2HD.nfd
crates/dynarec/: Cargo.toml
crates/dynarec/src/: backend_bytecode.rs  backend_x64.rs  block_map.rs  code_cache.rs  decoder.rs  ir.rs  jit.rs  lib.rs
crates/dynarec/tests/: interpreter_oracle.rs  smc_invalidation.rs  test386.rs  verification_i386_jit.rs
crates/kvm/: Cargo.toml
crates/kvm/src/: cpuid.rs  error.rs  exit.rs  leaked_slice.rs  lib.rs  memory.rs  system.rs  timer.rs  vcpu.rs  vm.rs
crates/kvm/tests/: smoke.rs
crates/machine/: Cargo.toml
crates/machine/src/: bus.rs  config.rs  lib.rs  machine.rs  memory.rs  ra40.rs  trace.rs
crates/machine/src/bus/: bios.rs  fdc.rs  fdd_hle.rs  graphics.rs  hdd.rs  init.rs  io_read.rs  io_write.rs  os_adapter.rs  pci.rs  pci_bios.rs
crates/machine/src/ra40/: cpu_shim.rs
crates/machine/tests/: beeper.rs  bios.rs  bus.rs  cdrom.rs  egc.rs  fdc.rs  fdd_hle.rs  floppy_swap.rs  fpu.rs  gdc.rs  grcg.rs  hle_stubs.rs  hlt_vsync.rs  ide.rs  integration.rs  mouse.rs  os_tracing.rs  pcm86.rs  pegc.rs  ra40_boot_probe.rs  ra40_construct.rs  rtc.rs  sasi.rs  sb16.rs  soundboard_14.rs  soundboard_26k.rs  soundboard_86.rs  text.rs
crates/machine/tests/bios/: cdrom_boot.rs  data.rs  fdc_interrupt.rs  fdd_boot.rs  hw_vectors.rs  ide_boot.rs  int09h.rs  int18h.rs  int19h.rs  int1ah.rs  int1bh.rs  int1ch.rs  int1fh.rs  keyboard.rs  lio.rs  post_bios_state.rs  sasi_boot.rs  serial_receive.rs  timer_tick.rs
crates/os/: Cargo.toml
crates/os/src/: cdrom.rs  commands.rs  config.rs  console.rs  console_adapter.rs  console_esc.rs  copy_common.rs  country.rs  dos.rs  file_io.rs  filesystem.rs  interrupt.rs  ioctl.rs  lib.rs  memory.rs  process.rs  shell.rs  state.rs  tables.rs  test_support.rs
crates/os/src/commands/: b3sum.rs  cd.rs  cls.rs  copy.rs  custom.rs  date.rs  del.rs  dir.rs  diskcopy.rs  dosmock.rs  echo.rs  editor.rs  format.rs  md.rs  mem.rs  mod.rs  more.rs  rd.rs  rem.rs  ren.rs  sedit.rs  set.rs  time.rs  type_cmd.rs  ver.rs  xcopy.rs
crates/os/src/filesystem/: fat.rs  fat_api.rs  fat_bpb.rs  fat_dir.rs  fat_file.rs  fat_partition.rs  iso9660.rs  mod.rs  virtual_drive.rs
crates/os/src/interrupt/: int20.rs  int24.rs  int25.rs  int26.rs  int27.rs  int28.rs  int29.rs  int2a.rs  int2f.rs  int33.rs  int67.rs  intdc.rs  mod.rs  xms.rs
crates/os/src/memory/: best_fit.rs  tlsf.rs  (+1 more)
crates/os/tests/: dos620.rs  tracing.rs
crates/sdl3/: Cargo.toml
crates/sdl3/src/: audio.rs  clipboard.rs  event.rs  filesystem.rs  gpu.rs  info.rs  keyboard.rs  lib.rs  log.rs  mouse.rs  properties.rs  render.rs  time.rs  video.rs
crates/software_renderer/: Cargo.toml
crates/software_renderer/src/: compose.rs  lib.rs
crates/software_renderer/tests/: e2e_egc.rs  e2e_gdc.rs  e2e_grcg.rs  e2e_pegc.rs  software_renderer.rs
(+352 files in other folders)
