[package]
name = "blake3"
version = "1.0.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>", "Samuel Neves"]
description = "The portable reference implementation of the BLAKE3 hash function"
license = "CC0-1"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]

[dependencies]
