[package]
name = "cpu"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
verification = ["serde", "serde_json", "flate2"]

[dependencies]
common = { workspace = true }
softfloat = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
