[package]
name = "cpu"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
verification = ["zlib-rs"]

[dependencies]
common = { workspace = true }
softfloat = { workspace = true }
zlib-rs = { workspace = true, optional = true }
