[package]
name = "device"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
mt32 = ["dep:munt_oxide"]
sc55 = ["dep:nuked_sc55_oxide"]

[dependencies]
common = { workspace = true }
munt_oxide = { workspace = true, optional = true }
nuked_sc55_oxide = { workspace = true, optional = true }
resampler = { workspace = true }
ymfm_oxide = { workspace = true }
