[package]
name = "dynarec"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
verification = ["cpu/verification", "dep:flate2"]

[dependencies]
common = { workspace = true }
cpu = { workspace = true }
flate2 = { workspace = true, optional = true }

[dev-dependencies]
machine = { workspace = true }
