[package]
name = "machine"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
sc55 = ["device/sc55"]

[dependencies]
common = { workspace = true }
cpu = { workspace = true }
device = { workspace = true }

[dev-dependencies]
resampler = { workspace = true }
