[package]
name = "os"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = { workspace = true }
common = { workspace = true }

[dev-dependencies]
cpu = { workspace = true }
device = { workspace = true }
machine = { workspace = true }
