[package]
name = "software_renderer"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
common = { workspace = true }
cpu = { workspace = true }
machine = { workspace = true }
